--- a/NUnit_and_v2/packages.config
+++ b/NUnit_and_v2/packages.config
@@ -2,9 +2,10 @@
 <packages>
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="NUnitTestAdapter" version="1.2" targetFramework="net45" />
-  <package id="xunit" version="2.0.0-beta5-build2789" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0-beta5-build2789" targetFramework="net45" />
-  <package id="xunit.assert" version="2.0.0-beta5-build2789" targetFramework="net45" />
-  <package id="xunit.core" version="2.0.0-beta5-build2789" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="0.99.9-build1023" targetFramework="net45" />
+  <package id="xunit" version="2.0.0-beta5-build2813" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.0-beta5-build2813" targetFramework="net45" />
+  <package id="xunit.assert" version="2.0.0-beta5-build2813" targetFramework="net45" />
+  <package id="xunit.core" version="2.0.0-beta5-build2813" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.0.0-beta5-build2813" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="0.99.10-build1027" targetFramework="net45" />
 </packages>
