--- a/v2_WPA81/packages.config
+++ b/v2_WPA81/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="xunit" version="2.0.0-beta5-build2789" targetFramework="wpa81" />
-  <package id="xunit.abstractions" version="2.0.0-beta5-build2789" targetFramework="wpa81" />
-  <package id="xunit.assert" version="2.0.0-beta5-build2789" targetFramework="wpa81" />
-  <package id="xunit.core" version="2.0.0-beta5-build2789" targetFramework="wpa81" />
-  <package id="xunit.runner.visualstudio.wpa81" version="0.99.9-build1023" targetFramework="wpa81" />
+  <package id="xunit" version="2.0.0-beta5-build2813" targetFramework="wpa81" />
+  <package id="xunit.abstractions" version="2.0.0-beta5-build2813" targetFramework="wpa81" />
+  <package id="xunit.assert" version="2.0.0-beta5-build2813" targetFramework="wpa81" />
+  <package id="xunit.core" version="2.0.0-beta5-build2813" targetFramework="wpa81" />
+  <package id="xunit.extensibility.core" version="2.0.0-beta5-build2813" targetFramework="wpa81" />
+  <package id="xunit.runner.visualstudio" version="0.99.10-build1027" targetFramework="wpa81" />
 </packages>
