--- a/v2_aspnet5/project.json
+++ b/v2_aspnet5/project.json
@@ -1,7 +1,7 @@
 ﻿{
     "dependencies": {
-        "xunit": "2.0.0-rc1-*",
-        "xunit.runner.aspnet": "2.0.0-rc1-*"
+        "xunit": "2.0.0-rc1-build2826",
+        "xunit.runner.aspnet": "2.0.0-rc1-build43"
     },
     "commands": {
         "test": "xunit.runner.aspnet"
