--- a/v1_net20/packages.config
+++ b/v1_net20/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="xunit" version="1.9.2" targetFramework="net20" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net20" />
-  <package id="xunit.runner.visualstudio" version="2.0.0-rc4-build1049" targetFramework="net20" />
+  <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net20" />
 </packages>
