--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="nuget.org" value="https://nuget.org/api/v2/" />
+    <add key="Public Feed" value="https://nuget.org/api/v2/" />
     <add key="CI Builds (xunit)" value="https://www.myget.org/F/xunit/" />
     <add key="CI Builds (xamarin.xunit)" value="https://www.myget.org/F/xunit-xamarin/" />
   </packageSources>
