--- a/v2_aspnet5/project.json
+++ b/v2_aspnet5/project.json
@@ -1,7 +1,7 @@
 ﻿{
     "dependencies": {
-        "xunit": "2.0.0-rc3-build2880",
-        "xunit.runner.aspnet": "2.0.0-rc3-build52"
+        "xunit": "2.1.0-beta1-build2940",
+        "xunit.runner.aspnet": "2.1.0-beta1-build54"
     },
     "commands": {
         "test": "xunit.runner.aspnet"
@@ -14,7 +14,7 @@
         },
         "aspnetcore50": {
             "dependencies": {
-                "System.Runtime": "4.0.20-beta-22416"
+                "System.Runtime": "4.0.20-beta-22605"
             }
         }
     }
