--- a/v2_dnx/project.json
+++ b/v2_dnx/project.json
@@ -1,20 +1,20 @@
 ﻿{
     "dependencies": {
-        "xunit": "2.1.0-beta1-build2945",
-        "xunit.runner.aspnet": "2.1.0-beta1-build60"
+        "xunit": "2.1.0-beta2-build2981",
+        "xunit.runner.dnx": "2.1.0-beta2-build79"
     },
     "commands": {
-        "test": "xunit.runner.aspnet"
+        "test": "xunit.runner.dnx"
     },
     "frameworks": {
-        "aspnet50": {
+        "dnx451": {
             "frameworkAssemblies": {
                 "System.Runtime": ""
             }
         },
-        "aspnetcore50": {
+        "dnx50": {
             "dependencies": {
-                "System.Runtime": "4.0.20-beta-22605"
+                "System.Runtime": "4.0.20-*"
             }
         }
     }
